# DNCefView

./: .gitignore  .gitmodules  CCefView.nuspec  CMakeLists.txt  CONTRIBUTING.md  generate-linux-x86.sh  generate-linux-x86_64.sh  generate-mac-arm64.sh  generate-mac-x86_64.sh  generate-win-arm64.bat  generate-win-x86.bat  generate-win-x86_64.bat  nuget-pack.bat  readme.md
.github/workflows/: build.yml  semgrep.yml
demo/DNCefView.Avalonia.Demo/: App.axaml  App.axaml.cs  CMakeLists.txt  MainWindow.axaml  MainWindow.axaml.cs  Program.cs  app.manifest
demo/DNCefView.Avalonia.Demo/webres/: index.html
demo/DNCefView.WPF.Demo/: App.xaml  App.xaml.cs  CMakeLists.txt  MainWindow.xaml  MainWindow.xaml.cs
demo/DNCefView.WPF.Demo/webres/: iframe.html
scripts/: gen.py  requirements.txt  test.py
scripts/pp2xlang/: translator.py
scripts/pp2xlang/generator/: c.py  csharp.py
src/CCefView/: CMakeLists.txt  CefBrowser.cpp  CefBrowser.h  CefBrowserCallback.h  CefBrowser_Impl.h  CefConfig.cpp  CefConfig.h  CefContext.cpp  CefContext.h  CefContext_Impl.h  CefQuery.cpp  CefQuery.h  CefSetting.cpp  CefSetting.h  CefTypes.h
src/CCefView/capi/: CefBrowserCallback_c.cpp  CefBrowserCallback_c.h  CefBrowser_c.cpp  CefBrowser_c.h  CefConfig_c.cpp  CefConfig_c.h  CefContext_c.cpp  CefContext_c.h  CefGlobal_c.cpp  CefGlobal_c.h  CefQuery_c.cpp  CefQuery_c.h  CefSetting_c.cpp  CefSetting_c.h  CefTypes_c.cpp  CefTypes_c.h  CefVersion_c.cpp  CefVersion_c.h
src/CCefView/details/: CCefAppDelegate.cpp  CCefAppDelegate.h  CCefClientDelegate.cpp  CCefClientDelegate.h  CCefClientDelegate_ContextMenuHandler.cpp  CCefClientDelegate_DisplayHandler.cpp  CCefClientDelegate_DownloadHandler.cpp  CCefClientDelegate_FocusHandler.cpp  CCefClientDelegate_KeyboardHandler.cpp  CCefClientDelegate_LifeSpanHandler.cpp  CCefClientDelegate_LoadHandler.cpp  CCefClientDelegate_RenderHandler.cpp
src/CCefView/details/utils/: CommonUtils.h  KeyboardUtils.h  MenuBuilder.cpp  ValueConvertor.cpp
src/CCefView/include/: CefBrowser.h  CefBrowserCallback.h  CefConfig.h  CefContext.h  CefGlobal.h  CefQuery.h  CefSetting.h  CefTypes.h  CefVersion.h
src/CCefView/linux/: CefContext_linux.cpp
src/CCefView/mac/: CefContext_mac.mm
src/CCefView/source/: CefBrowser.cpp  CefConfig.cpp  CefContext.cpp  CefQuery.cpp  CefSetting.cpp
src/CCefView/source/details/handlers/: CCefAppDelegate.cpp  CCefAppDelegate.h  CCefClientDelegate.cpp  CCefClientDelegate.h  CCefClientDelegate_ContextMenuHandler.cpp  CCefClientDelegate_DialogHandler.cpp  CCefClientDelegate_DisplayHandler.cpp  CCefClientDelegate_DownloadHandler.cpp  CCefClientDelegate_DragHandler.cpp  CCefClientDelegate_FocusHandler.cpp  CCefClientDelegate_JSDialogHandler.cpp  CCefClientDelegate_KeyboardHandler.cpp  CCefClientDelegate_LifeSpanHandler.cpp  CCefClientDelegate_LoadHandler.cpp  CCefClientDelegate_RenderHandler.cpp
src/CCefView/source/details/utils/: CommonUtils.h  KeyboardUtils.cpp  MenuBuilder.h  ValueConvertor.cpp  ValueConvertor.h
src/CCefView/source/win/: CefContext_win.cpp
src/CCefView/win/: CefContext_win.cpp
src/DNCef/: CMakeLists.txt  CefBrowser.cs  CefBrowserCallback.cs  CefConfig.cs  CefContext.cs  CefQuery.cs  CefSetting.cs  CefTypes.cs  ICefViewDelegate.cs
src/DNCef.WPF/DNCef.WPF/: CMakeLists.txt  CefView+WPF.cs  CefView.cs
src/DNCef.WPF/DNCef.WPF.Demo/: App.xaml  App.xaml.cs  DNCef.WPF.Demo.csproj  MainWindow.xaml  MainWindow.xaml.cs
src/DNCef.WPF/DNCef.WPF/IME/: IMEHandler.cs  NativeIME.cs  WPFImeHandler.cs
src/DNCef/AutoGen/: CefBrowser+AutoGen.cs  CefBrowserCallback+AutoGen.cs  CefConfig+AutoGen.cs  CefContext+AutoGen.cs  CefQuery+AutoGen.cs  CefSetting+AutoGen.cs  CefTypes+AutoGen.cs
src/DNCefView/: CMakeLists.txt  CefBrowser.cs  CefBrowserCallback.cs  CefConfig.cs  CefContext.cs  CefQuery.cs  CefSetting.cs  CefTypes.cs  Directory.Build.targets  ICefViewDelegate.cs
src/DNCefView.Avalonia/: CMakeLists.txt  CefView+Avalonia.cs  CefView+ContextMenu.cs  CefView+Cursor.cs  CefView+Focus.cs  CefView+IME.cs  CefView+ImClient.cs  CefView+Input.cs  CefView+JSDialog.cs  CefView+LogExt.cs  CefView+Render.cs  CefView+Utils.cs  CefView.cs  Directory.Build.targets
src/DNCefView.WPF/: CMakeLists.txt  CefView+WPF.cs  CefView.cs
src/DNCefView.WPF/IME/: IMEHandler.cs  NativeIME.cs  WPFImeHandler.cs
src/DNCefView/AutoGen/: CefBrowser+AutoGen.cs  CefBrowserCallback+AutoGen.cs  CefConfig+AutoGen.cs  CefContext+AutoGen.cs  CefQuery+AutoGen.cs  CefSetting+AutoGen.cs  CefTypes+AutoGen.cs  CefVersion+AutoGen.cs
